Roche 94 fixed clip-path overlap issue

--- a/assets/css/development/style.css
+++ b/assets/css/development/style.css
@@ -2057,7 +2057,7 @@ div.card-image.last > *:not(:last-of-type) {
   margin-right: -118px;
 }
 .sub-tabs.second-row > a:not(:last-of-type) {
-  margin-right: -161px;
+  margin-right: -136px;
 }
 
 @media (max-width: 37.5em) {
@@ -2085,11 +2085,6 @@ div.card-image.last > *:not(:last-of-type) {
   margin-right: -110px;
   position: relative;
   z-index: 99;
-}
-.sub-tabs > a:nth-child(2) {
-  -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-  margin-right: -158px;
 }
 
 .tab-heading {
